--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,13 +17,6 @@
                 android:value=".MainActivity" />
         </activity>
 
-        <activity
-            android:name=".SelectPersonajes"
-            android:parentActivityName=".MainActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity" />
-        </activity>
 
         <activity android:name=".MainActivity">
             <intent-filter>
@@ -33,6 +26,21 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".SelectPersonajes"
+            android:label="@string/app_name"
+
+            android:screenOrientation="landscape"
+            android:parentActivityName=".MainActivity">
+
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+        </activity>
+
+
     </application>
+
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-feature android:name="android.hardware.camera" android:required="true"/>
 
 </manifest>
